--- a/qa/seq-qa/docker-compose.yml
+++ b/qa/seq-qa/docker-compose.yml
@@ -16,6 +16,8 @@ services:
           - seq
     seq:
         image: datalust/seq:latest
+        volumes:
+          - /path/to/seqqa/data:/data
         environment:
             - ACCEPT_EULA=Y
         ports:
