--- a/dev/seq-dev/docker-compose.yml
+++ b/dev/seq-dev/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.8'
 
 networks:
     seqdevnetwork:
+volumes:
+  data:
 
 services:
     seqcli:
@@ -17,7 +19,7 @@ services:
     seq:
         image: datalust/seq:latest
         volumes:
-          - /path/to/seqdev/data:/data
+          - data:/data
         environment:
             - ACCEPT_EULA=Y
         ports:
